adds nottingham street aid

--- a/src/pages/nottingham/index.hbs
+++ b/src/pages/nottingham/index.hbs
@@ -73,6 +73,8 @@ location: nottingham
   </div>
 </div>
 
+{{> locations/banners/street-aid-notts }}
+
 {{> locations/banners/notts-food-rota }}
 
 {{!-- <div style="color: #1c1c1c;" class="block block--orange">
