--- a/src/partials/nottingham/supporters.hbs
+++ b/src/partials/nottingham/supporters.hbs
@@ -1,21 +1,9 @@
 <h2 class="h2">Supported by&hellip;</h2>
 <ul class="partners__list">
-  <li class="partners__logo partners__logo--arimathea-trust"><a href="https://www.nottinghamarimathea.org.uk/">{{> icon name="arimathea-trust"}}</a></li>
-  <li class="partners__logo partners__logo--base-51"><a href="https://www.facebook.com/Base51/">{{> icon name="base-51"}}</a></li>
+  <li class="partners__logo partners__logo--nottingham-bid"><a href="https://www.nottinghambid.com">{{> icon name="nottingham bid"}}</a></li>
+  <li class="partners__logo partners__logo--nottingham-building-society"><a href="https://www.thenottingham.com">{{> icon name="nottingham building society"}}</a></li>
+  <li class="partners__logo partners__logo--aht"><a href="https://www.alberthunttrust.org.uk">{{> icon name="albert hunt trust"}}</a></li>
+  <li class="partners__logo partners__logo--notts-city-co"><a href="https://www.nottinghamcity.gov.uk">{{> icon name="nottingham city council"}}</a></li>
   <li class="partners__logo partners__logo--boots"><a href="https://boots.co.uk">{{> icon name="boots"}}</a></li>
-  <li class="partners__logo partners__logo--coe"><a href="https://southwell.anglican.org/">{{> icon name="coe"}}</a></li>
-  <li class="partners__logo partners__logo--emmanuel-house"><a href="https://www.emmanuelhouse.org.uk/">{{> icon name="emmanuel-house"}}</a></li>
-  <li class="partners__logo partners__logo--hope-into-action"><a href="https://nottingham.hopeintoaction.org.uk/">{{> icon name="hope-into-action"}}</a></li>
-  <li class="partners__logo partners__logo--host-nottingham"><a href="http://www.hostnottingham.org.uk/">{{> icon name="host-nottingham"}}</a></li>
-  <li class="partners__logo partners__logo--jericho-road"><a href="https://www.jerichoroad.org.uk/">{{> icon name="jericho-road"}}</a></li>
   <li class="partners__logo partners__logo--lottery"><a href="https://www.tnlcommunityfund.org.uk/">{{> icon name="lottery"}}</a></li>
-  <li class="partners__logo partners__logo--night-shelter"><a href="https://www.emmanuelhouse.org.uk/services/winter-shelter/">{{> icon name="night-shelter"}}</a></li>
-  <li class="partners__logo partners__logo--openhomes"><a href="http://www.openhomes.org.uk/">{{> icon name="openhomes"}}</a></li>
-  <li class="partners__logo partners__logo--refugee-forum"><a href="http://www.nottsrefugeeforum.org.uk/">{{> icon name="refugee-forum"}}</a></li>
-  <li class="partners__logo partners__logo--salvation-army"><a href="https://www.salvationarmy.org.uk/nottingham-william-booth-memorial-halls">{{> icon name="salvation-army"}}</a></li>
-  <li class="partners__logo partners__logo--sea"><a href="http://www.seaparticipation.org.uk/">{{> icon name="sea"}}</a></li>
-  <li class="partners__logo partners__logo--street-pastors"><a href="https://streetpastors.org/locations/nottingham/">{{> icon name="street-pastors"}}</a></li>
-  <li class="partners__logo partners__logo--the-arches"><a href="https://thearchesnottingham.org/">{{> icon name="the-arches"}}</a></li>
-  <li class="partners__logo partners__logo--the-friary"><a href="https://the-friary.org.uk/">{{> icon name="the-friary"}}</a></li>
-  <li class="partners__logo partners__logo--ymca"><a href="https://www.nottsymca.com/">{{> icon name="ymca"}}</a></li>
 </ul>
