--- a/src/scss/partials/_block-ssn.scss
+++ b/src/scss/partials/_block-ssn.scss
@@ -314,6 +314,35 @@
     }
   }
 
+  &--street-aid-notts {
+    padding: 0 0 10px 0!important;
+    background-color: #ffcf06;
+    color: #fff;
+
+    @include mq($from: m) {
+      display: flex;
+    }
+
+    a {
+      color: $brand-d;
+    }
+
+    img {
+      width: 400px;
+      margin: auto;
+    }
+
+    .block__street-aid-notts {
+        @include mq($from: m) {
+        padding-top: 50px;
+        @include span(6 of 12);
+        border: none;
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
+
   &--street-change-glasgow {
     padding: 30px 0 30px 0!important;
     background-color: $street-change-glasgow;
