--- a/src/scss/partials/_partners.scss
+++ b/src/scss/partials/_partners.scss
@@ -975,7 +975,7 @@
     }
 
     &--boots {
-      width: 170px;
+      width: 150px;
 
       a {
         background-image: url(/assets/img/nottingham-logos/boots.png)
@@ -1023,7 +1023,7 @@
     }
 
     &--lottery {
-      width: 270px;
+      width: 280px;
 
       a {
         background-image: url(/assets/img/nottingham-logos/lottery.png)
@@ -1042,6 +1042,38 @@
 
       a {
         background-image: url(/assets/img/nottingham-logos/notts-logos.png)
+      }
+    }
+
+    &--nottingham-bid {
+      width: 250px;
+
+      a {
+        background-image: url(/assets/img/nottingham-logos/nottingham-bid.png)
+      }
+    }
+
+    &--aht {
+      width: 250px;
+
+      a {
+        background-image: url(/assets/img/nottingham-logos/aht.jpg)
+      }
+    }
+
+    &--nottingham-building-society {
+      width: 250px;
+
+      a {
+        background-image: url(/assets/img/nottingham-logos/nottingham-building-society.png)
+      }
+    }
+
+    &--notts-city-co {
+      width: 250px;
+
+      a {
+        background-image: url(/assets/img/nottingham-logos/notts-city-co.png)
       }
     }
 
