removes gm mailing list link

--- a/src/pages/about/contact/index.hbs
+++ b/src/pages/about/contact/index.hbs
@@ -78,9 +78,7 @@ page: contact
       <h2 class="h2">Join the conversation</h2>
       <p>You can join the conversation on
         <a href="https://twitter.com/streetsupportuk">Twitter</a>,
-        <a href="https://www.facebook.com/streetsupport/">Facebook</a> or subscribe to
-        <a href="http://streetsupport.us12.list-manage1.com/subscribe?u=da9a1d4bb2b1a69a981456972&id=52ba96f2af">our Greater Manchester mailing list</a> or our <a href="http://eepurl.com/gvtAjT">UK Network mailing list</a>.</p>
-
+        <a href="https://www.facebook.com/streetsupport/">Facebook</a> or subscribe to our <a href="http://eepurl.com/gvtAjT">UK Network mailing list</a>.</p>
     </div>
   </div>
 </div>
