adds new street aid banner

--- a/src/partials/locations/banners/street-aid-notts.hbs
+++ b/src/partials/locations/banners/street-aid-notts.hbs
@@ -4,11 +4,11 @@
       <img src="/assets/img/nottingham-logos/nottingham-street-aid.png" width="100%" alt="street aid notts logo" />
     </div>
     <div class="home__copy home__copy--street-aid-notts">
-      <h1>LAUNCHING FEBRUARY 1ST!</h1>
-      <p>We are asking people to give real help to homeless people by donating to a fund that goes directly to people in need. Every penny donated to Nottingham Street Aid will go to a homeless person to help them leave the street behind.</p>
-      {{!-- We have launched a new way to give in Nottingham. <a class="btn btn--brand-d" target="_blank" href="https://www.justgiving.com/alternativegiving">
+      <h1>A New Way to Give</h1>
+      <p>We are asking people to give real help to homeless people by donating to a fund that makes grants to people in need. Local charities will be able to apply to this fund to give help to a named individual who is homeless. All overheads are covered by our business and council partners, so you can be sure that every penny donated to Nottingham Street Aid will be spent on helping a homeless person to leave the streets behind.</p>
+      <a class="btn btn--brand-d" target="_blank" href="https://www.justgiving.com/alternativegiving">
         <span class="btn__text">Learn more</span>
-      </a> --}}
+      </a>
     </div>
   </div>
 </div>
