--- a/src/pages/nottingham/index.hbs
+++ b/src/pages/nottingham/index.hbs
@@ -79,7 +79,7 @@ location: nottingham
       <img src="/assets/img/nottingham-logos/nottingham-street-aid.png" width="100%" alt="street aid notts logo" />
     </div>
     <div class="home__copy home__copy--street-aid-notts">
-      <h1>LAUNCHING FEBRUARY 1ST!</h1>
+      <h1>LAUNCHING FEBRUARY 8TH!</h1>
       <p>We are asking people to give real help to homeless people by donating to a fund that goes directly to people in need. Every penny donated to Nottingham Street Aid will go to a homeless person to help them leave the street behind.</p>
       {{!-- We have launched a new way to give in Nottingham. <a class="btn btn--brand-d" target="_blank" href="https://www.justgiving.com/alternativegiving">
         <span class="btn__text">Learn more</span>
@@ -89,6 +89,8 @@ location: nottingham
 </div>
 
 {{!-- {{> locations/banners/street-aid-notts }} --}}
+
+{{> locations/banners/warm-spaces-notts }}
 
 {{> locations/banners/notts-food-rota }}
 
