updates ssg link on RC partners

--- a/src/pages/manchester/realchangemcr/partners/index.hbs
+++ b/src/pages/manchester/realchangemcr/partners/index.hbs
@@ -207,7 +207,7 @@ location: manchester
         <article>
           <h3 class="h3">SSG (Stop Start Go) Sustainable Living</h3>
           <p>SSG provides temporary accommodation and support for people sleeping rough in Manchester.</p>
-          <a class="btn btn--brand-d btn--full" href="#">
+          <a class="btn btn--brand-d btn--full" href="/find-help/accommodation/listing/details/?id=5a69c7ea152f051260e3e2d7">
             <span class="btn__text">More information about SSG</span>
           </a>
         </article>
