updates data integrity jd

--- a/src/pages/about/jobs/data-integrity/index.hbs
+++ b/src/pages/about/jobs/data-integrity/index.hbs
@@ -33,9 +33,8 @@ nosubnav: true
 <div class="block">
   <div class="container">
     <div class="block__content">
-      <p>We are looking for 1 to 2 Data Integrity Volunteers who will be responsible for handling UK organisation data and inputting this into our online platform. We currently have three volunteers in post and as Street Support Network grows, we envision our Data Integrity team increasing in size, supporting our Network to tackle homelessness.</p>
+      <p>We are looking for Data Integrity Volunteers who will be responsible for handling UK organisation data and inputting this into our online platform. We currently have three volunteers in post and as Street Support Network grows, we envision our Data Integrity team increasing in size, supporting our Network to tackle homelessness.</p>
       <p>Please read our Data Integrity Volunteer Job Description for more information and how to apply.</p>
-      <p><span>Closing date: </span>18:00 on the 11th of November</p>
       <div class="ctas">
         <a target="_blank" href="/about/jobs/data-integrity/data-integrity-jd.pdf" style="padding-right:10px;" class="btn btn--brand-d">
           <span class="btn__text">Job Description</span>
