--- a/src/pages/about/how-this-started/index.hbs
+++ b/src/pages/about/how-this-started/index.hbs
@@ -46,6 +46,7 @@ jsBundle: generic
       <p>And now we have a team of talented digital experts making this happen: social researcher Kim Foale, one of my favourite developers <a href="https://twitter.com/vincelee888">Vince Lee</a>, talented designer <a href="https://twitter.com/alvislives">Alexander Atkinson</a>, UX developer <a href="https://twitter.com/frontendphil">Phil Lennon</a>, copywriter <a href="https://twitter.com/DaniJStyles">Danielle Styles</a> and more giving their time generously to guide us along the way.</p>
       <p>I’m so glad that I took the chance to have that conversation. I hope that one day I will get the chance to thank that man, and tell him about the Street Support Network that he inspired.</p>
       <p>I hope you will join in, follow and support us, and help people facing homelessness get the help they need.</p>
+      <p>To find out more about our Viv, or to just say hello, please hop on over to her <a target="_blank"  href="https://connectingwisdom.uk/">website</a> or <a target="_blank" href="https://www.linkedin.com/in/vivslack/">LinkedIn profile</a>.</p>
 
       {{> social-share}}
     </div>
