adds wmca banner

--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -89,6 +89,11 @@ $street-change-glasgow: #201751;
 
 $sea-blue: #00A6B0;
 
+$wmht-hero-lilac: #796e78;
+$wmht-lilac: #534b53;
+$wmht-orange: #e57b2b;
+$wmht-grey: #515151;
+
 // Fonts
 @font-face {
     font-family: 'museo_sans_rounded300';
