--- a/src/scss/partials/_block-ssn.scss
+++ b/src/scss/partials/_block-ssn.scss
@@ -937,6 +937,7 @@
 
   &--wmca-taskforce {
     text-align: center;
+    // background: linear-gradient(180deg, $wmht-hero-lilac 0%, $wmht-lilac 100%);
   }
 
   &--orange {
