--- a/src/pages/west-midlands/index.hbs
+++ b/src/pages/west-midlands/index.hbs
@@ -61,7 +61,13 @@ page: home
   </div>
 </div>
 
-
+<div class="block block--highlight block--wmca-taskforce">
+  <h1 class="h1">WMCA Homelessness Taskforce</h1>
+  <p>Learn more about the work of the Homelessness Taskforce and access a range of resources that support the challenging task of ‘Designing out Homelessness’</p>
+  <a href="#" class="btn btn--brand-d">
+    <span class="btn__text">Learn more</span>
+  </a>
+</div>
 
 <div class="block block--grey-highlight">
   <div class="container">
@@ -144,14 +150,6 @@ page: home
       </a>
     </div>
   </div>
-</div>
-
-<div class="block block--highlight block--wmca-taskforce">
-  <h1 class="h1">WMCA Homelessness Taskforce</h1>
-  <p>One line about what it is and what it does.</p>
-  <a href="#" class="btn btn--brand-e">
-    <span class="btn__text">Learn more</span>
-  </a>
 </div>
 
 <div class="block block--standards-toolkit">
