adds notts street aid

--- a/src/pages/nottingham/money-help-services/index.hbs
+++ b/src/pages/nottingham/money-help-services/index.hbs
@@ -125,8 +125,7 @@ location: nottingham
       <h2 class="h2">Other support</h2>
       <p>School Uniform Project Nottingham:</p>
       <ul>
-        <li>Open throughout an August - turn up any time between 10 and 2 Tuesdays and Thursdays.
-</li>
+        <li>Open throughout an August - turn up any time between 10 and 2 Tuesdays and Thursdays.</li>
         <li>Uniform Project Nottingham is based at Himmah: Unit 2, Forest Court, Gamble St, Radford, Nottingham, NG7 4EX</li>
         <li>Outside of these hours, and during school term times book at appointment by email: <a href="mailto: uniformproject@hotmail.com ">uniformproject@hotmail.com </a></li>
         <li>Or message via facebook <a href="https://www.facebook.com/NottinghamUniform/">https://www.facebook.com/NottinghamUniform/</a></li>
