--- a/src/partials/nottingham/nav.hbs
+++ b/src/partials/nottingham/nav.hbs
@@ -8,6 +8,9 @@
         <li data-city="nottingham" class="nav__item nav__item--nottingham-advice">
           <a href="/nottingham/advice" class="nav__item-link nav__item-link--location-item">Advice</a>
         </li>
+        <li data-city="nottingham" class="nav__item nav__item--street-aid">
+          <a href="/nottingham/street-aid" class="nav__item-link nav__item-link--location-item">Street Aid</a>
+        </li>
       </ul>
     </dd>
   </dl>
