ss handbook link

--- a/src/pages/birmingham/index.hbs
+++ b/src/pages/birmingham/index.hbs
@@ -66,6 +66,18 @@ location: birmingham
 
 {{> locations/banners/change-into-action-birm }}
 
+<div class="block block--standards-toolkit">
+  <div class="block__standards-toolkit-pad"></div>
+  <div class="home__copy home__copy--standards-toolkit">
+    <h1>Birmingham On Street Support Handbook</h1>
+    <p>Welcome to the Birmingham On Street Support Handbook, a guide to help community groups working with people who are homeless and at risk of homelessness</p>
+    <p>This guide has been put together for members of the Birmingham On Street Support Forum by the Birmingham On Street Support Working Group, which comprises of BVSC, West Midlands Combined Authority (MWCA) Homelessness Taskforce, The Active Wellbeing Society (AWBS), Colmore Business District, and Let's Feed Brum.</p>
+    <a class="btn btn--brand-e" href="/west-midlands/on-ss-handbook.pdf">
+      <span class="btn__text">Read the handbook</span>
+    </a>
+  </div>
+</div>
+
 <div id="js-statistics-output"></div>
 
 <div class="block block--minor-highlight">
