--- a/src/pages/west-midlands/index.hbs
+++ b/src/pages/west-midlands/index.hbs
@@ -61,13 +61,13 @@ page: home
   </div>
 </div>
 
-<div class="block block--highlight block--wmca-taskforce">
+{{!-- <div class="block block--highlight block--wmca-taskforce">
   <h1 class="h1">WMCA Homelessness Taskforce</h1>
   <p>Learn more about the work of the Homelessness Taskforce and access a range of resources that support the challenging task of ‘Designing out Homelessness’</p>
   <a href="#" class="btn btn--brand-d">
     <span class="btn__text">Learn more</span>
   </a>
-</div>
+</div> --}}
 
 <div class="block block--grey-highlight">
   <div class="container">
@@ -158,7 +158,7 @@ page: home
     <h1>Birmingham On Street Support Handbook</h1>
     <p>Welcome to the Birmingham On Street Support Handbook, a guide to help community groups working with people who are homeless and at risk of homelessness</p>
     <p>This guide has been put together for members of the Birmingham On Street Support Forum by the Birmingham On Street Support Working Group, which comprises of BVSC, West Midlands Combined Authority (MWCA) Homelessness Taskforce, The Active Wellbeing Society (AWBS), Colmore Business District, and Let's Feed Brum.</p>
-    <a class="btn btn--brand-e" href="#">
+    <a class="btn btn--brand-e" href="/west-midlands/on-ss-handbook.pdf">
       <span class="btn__text">Read the handbook</span>
     </a>
   </div>
