updates wmca taskforce banner

--- a/src/pages/west-midlands/index.hbs
+++ b/src/pages/west-midlands/index.hbs
@@ -61,13 +61,16 @@ page: home
   </div>
 </div>
 
-{{!-- <div class="block block--highlight block--wmca-taskforce">
-  <h1 class="h1">WMCA Homelessness Taskforce</h1>
-  <p>Learn more about the work of the Homelessness Taskforce and access a range of resources that support the challenging task of ‘Designing out Homelessness’</p>
-  <a href="#" class="btn btn--brand-d">
-    <span class="btn__text">Learn more</span>
-  </a>
-</div> --}}
+<div class="block block--highlight block--wmca-taskforce">
+  <div class="container text-center">
+    <h1 class="h1">WMCA Homelessness Taskforce</h1>
+    <p>In 2017 the first Mayor of the West Midlands, Andy Street, established the WMCA Homelessness Taskforce with the explicit commitment to bring together organisations, people and resources to tackle homelessness in partnership with the 7 Local Authorities in the region.   Since its inception the Homelessness Taskforce has worked on a wide range of issues and initiatives ranging from Housing First through to research work on Families in Temporary Accommodation. </p>
+    <p>The Taskforce has developed new tools and resources to help organisations and service systems maximise the impact they can have on homelessness prevention, which you can find by following the link below.  All our work focuses on Designing out Homelessness from policy, practice and planning by Designing in Prevention so that we collectively make homelessness rare, brief and non-recurring. </p>
+    <a href="https://wmhtf.net" class="btn btn--brand-d">
+      <span class="btn__text">Learn more</span>
+    </a>
+  </div>
+</div>
 
 <div class="block block--grey-highlight">
   <div class="container">
@@ -149,18 +152,6 @@ page: home
         <span class="btn__text">Donate now</span>
       </a>
     </div>
-  </div>
-</div>
-
-<div class="block block--standards-toolkit">
-  <div class="block__standards-toolkit-pad"></div>
-  <div class="home__copy home__copy--standards-toolkit">
-    <h1>Birmingham On Street Support Handbook</h1>
-    <p>Welcome to the Birmingham On Street Support Handbook, a guide to help community groups working with people who are homeless and at risk of homelessness</p>
-    <p>This guide has been put together for members of the Birmingham On Street Support Forum by the Birmingham On Street Support Working Group, which comprises of BVSC, West Midlands Combined Authority (MWCA) Homelessness Taskforce, The Active Wellbeing Society (AWBS), Colmore Business District, and Let's Feed Brum.</p>
-    <a class="btn btn--brand-e" href="/west-midlands/on-ss-handbook.pdf">
-      <span class="btn__text">Read the handbook</span>
-    </a>
   </div>
 </div>
 
