adds nottingham to business section

--- a/src/pages/give-help/business-support/index.hbs
+++ b/src/pages/give-help/business-support/index.hbs
@@ -80,6 +80,19 @@ page: partnership
       <li>Get in contact with us to support Street Support Network directly: <a href="mailto:info@streetsupport.net">info@streetsupport.net</a></li>
     </ul>
 
+    <h3 class="h3"><a href="/nottingham">Nottingham</a></h3>
+
+    <p>We know that people and businesses in Nottingham care about homelessness and rough sleeping on our streets.</p>
+
+    <p>Many businesses across Nottingham are already involved with Street Support in a variety of ways assisting us in our efforts to help homeless people. This ranges from Nottingham BID and The Nottingham Building Society supporting our initiatives with logistics funding and Ideagen contributing to the Nottingham Street Aid fund to other businesses hosting our contactless points, and many more displaying the Nottingham Street Aid posters that provide a quick and easy way for the public to get involved.</p>
+
+    <p>We ask businesses in Nottingham to:</p>
+
+    <ul>
+      <li>Contact <a href="mailto:nottingham@streetsupport.net">nottingham@streetsupport.net</a> with any questions about how you can support the network and organisations that directly support those who are rough sleeping or at risk of homelessness.</a></li>
+      <li>Help might be financial, but might also provide pro bono support to charities or offer employee time in volunteering days spent with one of our member organizations.</li>
+    </ul>
+
     <h3 class="h3"><a href="/reading">Reading</a></h3>
 
     <p>Reading has a vibrant and varied business network that we know genuinely cares about homelessness and rough sleeping on our streets. Street Support Reading is a growing cross-sector partnership that is working towards ending rough sleeping in our borough and trying to prevent homelessness in the first place.</p>
