removes streetlink phone number

--- a/src/pages/bcp/index.hbs
+++ b/src/pages/bcp/index.hbs
@@ -43,7 +43,7 @@ location: bcp
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Bournemouth, Christchurch and Poole, you can alert BCP Street Outreach Service by emailing <a href="mailto:BCPSOS@MUNGOS.ORG">bcpsos@mungos.org</a> or by calling the national Streetlink team on <a href="tel:03005000914">0300 500 0914</a></p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Bournemouth, Christchurch and Poole, you can alert BCP Street Outreach Service by emailing <a href="mailto:BCPSOS@MUNGOS.ORG">bcpsos@mungos.org</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/bcp/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
