--- a/src/pages/cambridgeshire/index.hbs
+++ b/src/pages/cambridgeshire/index.hbs
@@ -54,7 +54,7 @@ location: cambridgeshire
       </div>
       <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough ANYWHERE in Cambridgeshire, you can:</p>
       <p>Contact the Street Outreach Team with details of where the rough sleeper can be found on 01223 366292 from 8am-4pm Mon-Fri.</p>
-      <p>Call Streetlink on <a href="tel:03005000914">0300 500 0914</a> any time or use the Streetlink <a href="https://www.streetlink.org.uk/StreetLinkLoginvf">website</a> or App <span style="font-style: italic;">(requires registration)</span>.</p>
+      <p>Use the Streetlink <a href="https://www.streetlink.org.uk/StreetLinkLoginvf">website</a> or App <span style="font-style: italic;">(requires registration)</span>.</p>
       <p>Call the City Council’s Housing Advice Service on <a href="tel:01223 457918">01223 457918</a> 9-5.15pm Mon-Fri or out-of-hours on <a href="tel:0330 053 8109">0330 053 8109</a></p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/cambridgeshire/advice">
         <span class="btn__text">See more emergency advice</span>
