--- a/src/pages/luton/index.hbs
+++ b/src/pages/luton/index.hbs
@@ -43,7 +43,7 @@ location: luton
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Luton, you can alert Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a> or by calling <a href="tel:03005000914">0300 500 0914</a>. The information will be sent to our outreach team who will respond the same or next day.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Luton, you can alert Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>. The information will be sent to our outreach team who will respond the same or next day.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/luton/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
