--- a/src/pages/manchester/index.hbs
+++ b/src/pages/manchester/index.hbs
@@ -44,7 +44,7 @@ location: manchester
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Manchester, you can alert the Council on their <a href="https://secure.manchester.gov.uk/forms/form/1183/en/report_rough_sleeping">website</a>. Alternatively, you can inform Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a> or by calling <a href="tel:03005000914">0300 500 0914</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Manchester, you can alert the Council on their <a href="https://secure.manchester.gov.uk/forms/form/1183/en/report_rough_sleeping">website</a>. Alternatively, you can inform Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/manchester/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
