--- a/src/pages/solihull/severe-weather-accommodation/index.hbs
+++ b/src/pages/solihull/severe-weather-accommodation/index.hbs
@@ -39,8 +39,8 @@ location: solihull
         <li>They must have nowhere available to them to sleep indoors during the course of the severe weather (indoors does not include cars, shed or garages)</li>
         <li>They must agree to assistance under the SWEP procedure</li>
       </ul>
-      <p>Should you require accommodation you can contact Solihull Community Housing on <a href="tel:0121 717 1515">0121 717 1515</a> (which offers a 24-hour service) Any partner organisation or member of the public who identify a rough sleeper / potential rough sleeper can also contact StreetLink on <a href="tel:0300 500 0914">0300 500 0914</a> or SCH on <a href="tel:0121 717 1515">0121 717 1515</a> (which offers a 24-hour service) or in an emergency the Police and other emergency services as appropriate).</p>
-      <p>If you are worried about someone you've seen sleeping rough in Solihull, you can alert Solihull’s Rough Sleeper Outreach Service via Streetlink by downloading the Streetlink app or by calling <a href="tel:0300 500 0914">0300 500 0914</a>.</p>
+      <p>Should you require accommodation you can contact Solihull Community Housing on <a href="tel:0121 717 1515">0121 717 1515</a> (which offers a 24-hour service) Any partner organisation or member of the public who identify a rough sleeper / potential rough sleeper can contact SCH on <a href="tel:0121 717 1515">0121 717 1515</a> (which offers a 24-hour service) or in an emergency the Police and other emergency services as appropriate).</p>
+      <p>If you are worried about someone you've seen sleeping rough in Solihull, you can alert Solihull’s Rough Sleeper Outreach Service via Streetlink by downloading the <a href="https://streetlink.org.uk">Streetlink</a> app.</p>
 
     {{> social-share}}
 
