--- a/src/pages/liverpool/index.hbs
+++ b/src/pages/liverpool/index.hbs
@@ -43,7 +43,7 @@ location: liverpool
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Liverpool, you can alert the Council by calling their 24-hour Always Room Inside helpline on <a href="03001232041">0300 123 2041</a>. Alternatively, you can inform Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a> or by calling <a href="tel:03005000914">0300 500 0914</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Liverpool, you can alert the Council by calling their 24-hour Always Room Inside helpline on <a href="03001232041">0300 123 2041</a>. Alternatively, you can inform Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/liverpool/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
