--- a/src/pages/rochdale/index.hbs
+++ b/src/pages/rochdale/index.hbs
@@ -43,7 +43,7 @@ location: rochdale
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Rochdale, you can alert the Council and Rochdale’s Rough Sleeper Outreach Service via Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a> or by calling <a href="tel:03005000914">0300 500 0914</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Rochdale, you can alert the Council and Rochdale’s Rough Sleeper Outreach Service via Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/rochdale/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
