updates chelmsford col support

--- a/src/pages/chelmsford/money-help-services/index.hbs
+++ b/src/pages/chelmsford/money-help-services/index.hbs
@@ -201,14 +201,22 @@ location: chelmsford
         <li>Website: <a target="_blank" href="https://www.peabody.org.uk/cs-services/outreach">https://www.peabody.org.uk/cs-services/outreach</a>.</li>
       </ul>
 
-      <h2 class="h2">Growbaby shop</h2>
+      <h2 class="h2">Baby Basics</h2>
+      <ul>
+        <li>Part of the community activities from: Moulsham Lodge Methodist Church, Lime Walk, Chelmsford, CM2 9NJ</li>
+        <li>Tel: <a href="tel:07895 904594">07895 904594</a></li>
+        <li>Email: <a href="mailto:babybasicschelmsford@gmail.com">babybasicschelmsford@gmail.com</a></li>
+        <li>https://baby-basics.org.uk/</li>
+        <li>Offers help and support to new mothers or families who are struggling to meet the finacial and practical burden of looking after a new baby. Clothing bank, baby equipment etc, see a list here: https://baby-basics.org.uk/how-to-get-involved/giving-supplies/</li>
+      </ul>
+
+      <h2 class="h2">Growbaby Chelmsford</h2>
       <ul>
         <li>199 – 200 Moulsham Street, Chelmsford, CM2 0LG</li>
-        <li>Provides free, good quality, new or second-hand clothes to 0-11s regardless of faith, income or background.</li>
-        <li>Drop-in session every Wednesday morning from 10am-1pm, as well as every third Saturday of the month from 10am-12pm during term time.</li>
-        <li>For more information email Pippa at <a href="growbaby@chelmsfordvineyard.org">growbaby@chelmsfordvineyard.org</a>.</li>
-        <li>Growbaby is a project of Chelmsford Vineyard Church.</li>
-        <li>Facebook page: <a target="_blank" href="https://www.facebook.com/groups/growbabychelmsford/">https://www.facebook.com/groups/growbabychelmsford/</a>.</li>
+        <li>Opening hours: 10am – 12.00 (Saturday monthly) 10am – 1pm (Wednesday weekly)</li>
+        <li>Tel: <a href="tel:07564 982595">07564 982595</a></li>
+        <li>Email: <a href="mailto:growbaby@chelmsfordvineyard.org">growbaby@chelmsfordvineyard.org</a></li>
+        <li>https://www.growbaby.org/directory/growbaby-chelmsford</li>
       </ul>
 
       <h2 class="h2">St Vincent de Paul Society</h2>
@@ -216,7 +224,25 @@ location: chelmsford
         <li>Beardsley Drive, Springfield, Chelmsford, CM1 6GQ</li>
         <li>Tel: <a href="tel:07796393131">07796 393131</a> email: <a href="mailto:presidenta030408@svp.org.uk">presidenta030408@svp.org.uk</a>.</li>
         <li>Website: <a target="_blank" href="https://www.svp.org.uk/">https://www.svp.org.uk/</a>.</li>
-        <li>Aiming to tackle poverty and offering support. Community Support Projects includes community shops, furniture stores, support centres and supported accommodation.</li>
+        <li>White goods, furniture (including beds), kitchen equipment etc. List here: https://staugustinespringfield.org.uk/svp-furniture-project</li>
+      </ul>
+
+      <h2 class="h2">Lighthouse Furniture Project LTD</h2>
+      <ul>
+        <li>25/27 Tallon Road, Brentwood, Essex, CM13 1TE</li>
+        <li>Tel: <a href="tel:01277 222050">01277 222050</a></li>
+        <li>Email: <a href="mailto:admin@lighthousefurniture.org">admin@lighthousefurniture.org</a></li>
+        <li>http://www.lighthousefurniture.org/</li>
+        <li>Opening hours: Monday: 9.30am – 4.30pm | Tuesday – Friday: 9.00am – 4.30pm | Saturday: 9.00am- 12.30pm</li>
+        <li>(Telephone is not manned at the weekend) Offer discounted furniture, white goods and household products (including electrical items, kitchen ware and bedding). Some items may be free of charge depending on circumstance.</li>
+      </ul>
+
+      <h2 class="h2">Little Edi Foundation:</h2>
+      <ul>
+        <li>585 Galleywood Road, Chelmsford Essex, CM2 8BS</li>
+        <li>Tel: <a href="tel:07859 815929">07859 815929</a></li>
+        <li>Email: <a href="mailto:littleedifoundation@gmail.com">littleedifoundation@gmail.com</a></li>
+        <li>Creates development opportunities for disadvantaged young people from local areas this may include giving aid including fresh food, toys, school equipment and uniform, volunteering and organising events for the younger children and have a summer scheme.</li>
       </ul>
 
     </div>
